# trackedit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml  version-bump.yml
_tests/: test_annot_mapping.py  test_imaging.py  test_latest.py  test_tmax.py  test_widgets.py  test_work_same_db.py
docs/: repair_dangling_parents.md
scripts/: check_dangling_parents.py  convert_geff_to_db.py  demo_neuromast.ipynb  demo_neuromast.py  script_challenge.py  script_cropped_fov.py  script_instanseg.py  script_neuromast.py  script_organelledynamics.py  script_ziwen.py  test_large_db.py
scripts/random/: try_SimpleImageArray.py  try_adding_nodes_to_db.ipynb  try_image_data.ipynb
trackedit/: DatabaseArray.py  DatabaseHandler.py  TrackEditClass.py  TrackEdit_functions.py  UltrackArray.py  __about__.py  __main__.py  cli.py  database_handler.py  hierarchy_viz_widget.py  instanseg_inference.py  motile_overwrites.py  run.py
trackedit/_tests/: __init__.py  test_UI_actions.py  test_annot_mapping.py  test_imaging.py  test_latest.py  test_tmax.py  test_utils.py
trackedit/arrays/: DatabaseArray.py  HierarchyArray.py  ImagingArray.py  UltrackArray.py
trackedit/utils/: crop.py  geff.py  red_flag_funcs.py  utils.py
trackedit/widgets/: ClickableLabel.py  CustomEditingMenu.py  CustomEditingWidget.py  HierarchyWidget.py  NavigationWidget.py  base_box.py  navigation_widget.py
trackedit/widgets/annotation/: annotation_widget.py  toannotate_box.py  todo_box.py
trackedit/widgets/navigation/: base_box.py  division_box.py  navigation_widget.py  red_flag_box.py  time_box.py
