[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackedit"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "TeunHuijben", email = "teun.huijben@czbiohub.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mip >= 1.16rc0",
  "click >= 8.0",
  "geff[rx]",
]

[project.scripts]
trackedit = "trackedit.cli:cli"

[project.urls]
Documentation = "https://github.com/TeunHuijben/trackedit#readme"
Issues = "https://github.com/TeunHuijben/trackedit/issues"
Source = "https://github.com/TeunHuijben/trackedit"

[tool.hatch.version]
path = "trackedit/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:trackedit trackedit/_tests}"

[tool.coverage.run]
source_pkgs = ["trackedit", "trackedit/_tests"]
branch = true
parallel = true
omit = [
  "trackedit/__about__.py",
]

[tool.coverage.paths]
trackedit = ["trackedit", "*/trackedit/trackedit"]
tests = ["trackedit/_tests", "*/trackedit/trackedit/_tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pixi.project]
channels = ["conda-forge", "numba","gurobi","funkelab"]
platforms = ["linux-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
ultrack = { git = "https://github.com/royerlab/ultrack.git", rev = "71537e2fbdd57be5c61ec886973c56ae89b1b9e6" }
geff = {git = "https://github.com/live-image-tracking-tools/geff.git"}

[tool.pixi.feature.editable.pypi-dependencies]
trackedit = { path = ".", editable = true }
motile_tracker = { path = "./motile_tracker", editable = true }

[tool.pixi.feature.release.pypi-dependencies]
trackedit = { path = "."}
motile_tracker = { path = "./motile_tracker"}

[tool.pixi.tasks]

[tool.pixi.dependencies]
higra = ">=0.6.12,<0.7"
numba = { version = ">=0.57.0,<0.61", channel = "numba" }
llvmlite = { version = ">=0.44.0,<0.45", channel = "numba" }
ilpy = ">=0.5.1,<0.6"
pyscipopt = "*" # needed for ilpy on mac
# napari-ome-zarr = ">=0.6.1,<0.7"
zarr = ">=3.0.0,<4.0.0" # zarr v3 support, ultrack now compatible
psycopg2-binary = ">=2.9.6"
pyqt = ">=5.15.9,<6"
numpy = "<2.2"
pre-commit = ">=4.1.0,<5"
dask = ">=2025.2.0,<2026"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-qt = ">=4.4.0,<5"
pytest-cov = ">=6.0.0,<7"
pytest-forked = ">=1.6.0,<2"

[tool.pixi.feature.test.tasks]

[tool.pixi.environments]
default = { features = ["editable"], solve-group = "default" }
release = { features = ["release"], solve-group = "release" }
test = { features = ["test", "editable"], solve-group = "default" }
